tests/baselines/reference/parserMemberVariableDeclaration2(strict=true).errors.txt
parserMemberVariableDeclaration2.ts(2,10): error TS1434: Unexpected keyword or identifier.
parserMemberVariableDeclaration2.ts(2,10): error TS7008: Member 'static' implicitly has an 'any' type.
parserMemberVariableDeclaration2.ts(2,17): error TS7008: Member 'Foo' implicitly has an 'any' type.


==== parserMemberVariableDeclaration2.ts (3 errors) ====
    class C {
      static static Foo;
             ~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
             ~~~~~~
!!! error TS7008: Member 'static' implicitly has an 'any' type.
                    ~~~
!!! error TS7008: Member 'Foo' implicitly has an 'any' type.
    }